# cf-alias

./: .dprint.json  .gitignore  .gitmodules  .goreleaser.yml  .rustfmt.toml  Cargo.toml  README.md  build.rs  deny.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: config.rs  main.rs
tools/: aur-push.sh  goreleaser-dist.sh
