[package]
name = "cf-alias"
version = "0.1.9"
edition = "2021"
rust-version = "1.63.0"
description = "Create Cloudflare email alias' directly from your terminal or Alfred."
license = "MIT"
homepage = "https://github.com/4ndr0666/cf-alias"
repository = "https://github.com/4ndr0666/cf-alias"
readme = "README.md"
authors = ["4ndr0666 <01_dolor.loftier@icloud.com>"]
keywords = ["cloudflare", "email", "alias", "alfred", "cli"]
categories = ["command-line-utilities"]
default-run = "cf-alias"

[dependencies]
anyhow = "=1.0.65"
chrono = "=0.4.22"
clap = "=3.2.17"
clap_complete = "=3.2.3"
clipboard = "=0.5.0"
dirs = "=4.0.0"
memorable-wordlist = "=0.1.7"
notify-rust = "=4.5.8"
open = "=3.0.3"
openssl = "0.10.73"
rand = "=0.8.4"
reqwest = { version = "=0.11.11", default-features = false, features = ["native-tls-vendored", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "=1.20.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
cargo_toml = "0.15"

[package.metadata.bin]
cargo-deny = "0.13.5"
cargo-bundle-licenses = "1.0.1"
cross = "0.2.4"
dprint = "0.30.3"
rust-script = "=0.21.0"

[package.metadata.commands]
fmt = "cargo fmt --all"
lint = "cargo clippy --all-targets --all-features -- -D warnings"
test = "cargo test --all --all-features"
check = "cargo check --release"
build = "cargo build --release"
run = "cargo run --release"
completions = "cargo run --release -- completion"
release = "goreleaser release --snapshot --skip=publish,sign --clean"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
